2008-09-08  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-button.c (hildon_button_set_arrangement): Pack the
	button value label with (FALSE, FALSE) to prevent NB#88126 from
	being triggered.

2008-09-08  Alejandro G. Castro	 <alex@igalia.com>

	* examples/hildon-pannable-area-example.c,
	(main): Removed examples panning a vbox inside a pannable
	area. Check bug NB#87965

2008-09-08  Alejandro G. Castro	 <alex@igalia.com>

	Patch contributed by Kris Rietveld (kris@imendio.com)

	* src/hildon-pannable-area.c,
	(hildon_pannable_area_get_topmost): replaced the get_geometry with
	get_size and get_position, this saves an X server roundtrip.

2008-09-05  Alberto Garcia  <agarcia@igalia.com>

	* doc/hildon-docs.sgml
	* doc/hildon.types
	* examples/Makefile.am
	* examples/hildon-entry-example.c
	* src/Makefile.am
	* src/hildon-entry.c
	* src/hildon-entry.h
	* src/hildon.h:
	New HildonEntry widget, with example.

2008-09-05  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-button.c (hildon_button_construct_child): Pack the
	image with expand == fill == FALSE. This is a workaround for a bug
	in GtkBox.

2008-09-05  Claudio Saavedra  <csaavedra@igalia.com>

	* examples/hildon-pannable-area-example-2.c: (main): Use the stock
	labels for the text column, to make it more look more dynamic.

2008-09-04  Alejandro Pinheiro  <apinheiro@igalia.com>

	* src/hildon-time-selector.c
	Define gettext auxiliar macro N_
	(_create_minutes_model)
	(_create_hours_model)
	(_create_ampm_model): use of strftime in order to fill the model
	* src/hildon-date-selector.c
	(hildon_date_selector_finalize):
	(_locales_init): remove the logic related to get the name of the months
	using nl_langinfo, as it is not required anymore
	(_create_day_model)
	(_create_year_model)
	(_create_month_model)
	(_update_day_model): use of strftime in order to fill the model properly


2008-09-04  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-button.h